# armada_resources

./: README.md
armada_bringup/: CMakeLists.txt  package.xml
armada_bringup/robotiq/launch/: r2f85_action_server.launch  robotiq_action_server.launch
armada_bringup/robotiq/src/: gripper_state_publisher.py  r2f85_joint_state_publisher.cpp
armada_bringup/sakerobotics/launch/: ezgripper_action_server.launch
armada_bringup/sakerobotics/nodes/: ezgripperGUI.py
armada_bringup/src/: r2f85_joint_state_publisher.cpp
armada_bringup/src/actionserver/: r2f85_control_server.cpp
armada_bringup/universal_robot/launch/: ur5e_bringup.launch  ur_common.launch
armada_description/: CMakeLists.txt
armada_description/armada_test_station/urdf/: platform.urdf  sim_workstation.sdf  workstation_model.urdf.xacro  workstation_model_macro.urdf.xacro
armada_description/armada_tooling/meshes/: d435.STL  d435.dae  d435_mount_link.STL  d435_mount_link.dae  millibar_adapters_link.STL  millibar_adapters_link.dae  r85_network_adapter_link.STL  r85_network_adapter_link.dae
armada_description/armada_tooling/urdf/: d435_millibar_macro.urdf.xacro  d435_millibar_model_macro.urdf.xacro  modular_mount_macro.urdf.xacro  modular_mount_model_macro.urdf.xacro
armada_description/robotiq/: gripper_action_controller_parameters.yaml  r2f85_gripper_action_controller_parameters.yaml
armada_description/robotiq/urdf/: robotiq_2f_85_macro.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro
armada_description/sakerobotics/meshes/: SAKE_Finger_L1_Gen2.dae  SAKE_Finger_L2_Gen2.dae  (+1 more)
(+108 files in other folders)
